GEODE-8705: Fix expected command options for JDK 17 with classloader isolation.